Convert to asciidoctor

--- a/README.adoc
+++ b/README.adoc
@@ -1,60 +1,63 @@
-What you'll build
------------------
+:toc:
+:icons: font
+:source-highlighter: prettify
+== What you'll build
 
-You'll set up [Spring XD (eXtreme Data)](https://github.com/spring-projects/spring-xd/wiki), create a stream to monitor a live twitter feed, and pipe it into a file.
+You'll set up https://github.com/spring-projects/spring-xd/wiki[Spring XD (eXtreme Data)], create a stream to monitor a live twitter feed, and pipe it into a file.
 
-What you'll need
-----------------
+== What you'll need
 
  - About 15 minutes
  - JDK 1.7 or later
  
-How to complete this guide
---------------------------
+== How to complete this guide
 
-If you are on a Mac you can get some simple instructions to [install Homebrew](#scratch).
+If you are on a Mac you can get some simple instructions to <<scratch>>.
 
-If you don't have a Mac or you aren't interested in installing Homebrew, then you can skip that and jump right to [Installing Spring XD](#initial).
+If you don't have a Mac or you aren't interested in installing Homebrew, then you can skip that and jump right to <<initial>>.
 
-<a name="scratch"></a>
-Installing Homebrew
--------------------
+[[scratch]]
+== Install Homebrew
 There are several package managers available for Mac OS X, but one of the most popular is Homebrew. And we have strong support for Homebrew! If you haven't already, use these steps to set it up.
 
-    $ ruby -e "$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)"
+----
+ruby -e "$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)"
+----
     
 This installation script will provide extra information.
 
-Homebrew has a base set of "formulas" to install many tools. But it also comes with the ability to support 3rd party sets called "taps". Pivotal has a [tap](http://github.com/pivotal/homebrew-tap) that includes several tools including Spring XD, which you'll see in the next section.
+Homebrew has a base set of "formulas" to install many tools. But it also comes with the ability to support 3rd party sets called "taps". Pivotal has a http://github.com/pivotal/homebrew-tap[tap] that includes several tools including Spring XD, which you'll see in the next section.
 
-<a name="initial"></a>
-Installing Spring XD
---------------------
+[[initial]]
+== Installing Spring XD
 
 If you are using a Mac with Homebrew, the process is pretty simple.
 
-    $ brew tap pivotal/tap && brew install springxd
+----
+brew tap pivotal/tap && brew install springxd
+----
     
 That's it! It might take a little bit of time to install.
 
 If you aren't using Homebrew or you're on a different platform:
 
-1. Download [Spring XD 1.0.0.M4](http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/1.0.0.M4/spring-xd-1.0.0.M4-dist.zip).
+1. Download http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/1.0.0.M4/spring-xd-1.0.0.M4-dist.zip[Spring XD 1.0.0.M4].
 2. Move it to your preferred folder and unzip it.
 3. Configure XD_HOME to point at that folder.
 
 
-Running Spring XD
------------------
+== Running Spring XD
 To start Spring XD:
 
-    $ xd-singlenode
+----
+xd-singlenode
+----
     
-> **Note:** *singlenode* is Spring XD's simplest mode and more suited for demonstration purposes. See https://github.com/spring-projects/spring-xd/wiki for more options and details.
+NOTE: *singlenode* is Spring XD's simplest mode and more suited for demonstration purposes. See https://github.com/spring-projects/spring-xd/wiki for more options and details.
     
 You should see something like this:
 
-```
+....
 22:55:18,330  INFO main server.AdminServer:205 - started embedded tomcat adapter
 22:55:18,801  INFO main container.XDContainer:143 - started container: 0
 22:55:18,808  INFO main launcher.LocalContainerLauncher:109 - 
@@ -69,15 +72,17 @@ You should see something like this:
 1.0.0.M4                         eXtreme Data
 
 Using local mode JMX is disabled for XD components
-```
+....
 
 In another terminal, start Spring XD's management  shell:
 
-    $ xd-shell
+----
+xd-shell
+----
     
 This will produce a prompt:
 
-```
+....
  _____                           __   _______
 /  ___|          (-)             \ \ / /  _  \
 \ `--. _ __  _ __ _ _ __   __ _   \ V /| | | |
@@ -90,7 +95,7 @@ eXtreme Data
 1.0.0.M4 | Admin Server Target: http://localhost:8080
 Welcome to the Spring XD shell. For assistance hit TAB or type "help".
 xd:>
-```
+....
 
 Inside Spring XD's shell create a twitter stream:
 
@@ -102,7 +107,7 @@ Here you are creating a **stream** which consists of a *source* and a *sink*.
 - The source is **twittersearch**, output formatted as JSON, every 1000 milliseconds, querying on the token *java*.
 - The results are piped into the **file** sink, which defaults to **/tmp/xd/output/[streamName].out**
 
-> **Note:** This example shows the output being written as JSON. Spring XD supports many more formats for both inputs and outputs. Read more about this at https://github.com/spring-projects/spring-xd/wiki/Type-Conversion.
+NOTE: This example shows the output being written as JSON. Spring XD supports many more formats for both inputs and outputs. Read more about this at https://github.com/spring-projects/spring-xd/wiki/Type-Conversion.
 
 In another terminal:
 
@@ -111,7 +116,8 @@ In another terminal:
 
 Spring XD is capturing live data from twitter about *java* and writing it to `twittersearchjava.out`. You should see something like this:
 
-```json
+[source,json]
+----
 {
 	"id":394549063997460480,
 	"text":"Hello world, do u need an experienced #Java #Software #Developer? Contact me ASAP. I work as a freelancer and full time. BB pin: 23AD2DCE","createdAt":1382902801000,
@@ -174,13 +180,12 @@ Spring XD is capturing live data from twitter about *java* and writing it to `tw
 	},
 	"retweet":false
 }
-```
+----
 
-This is a single tweet in [JSON](/understanding/JSON) format. The file actually contains many tweets, but that would fill up the guide. And while Spring XD runs, the file sink will continue to grow as it accumulates more data.
+This is a single tweet in link:/understanding/JSON[JSON] format. The file actually contains many tweets, but that would fill up the guide. And while Spring XD runs, the file sink will continue to grow as it accumulates more data.
     
-> **Note:** Actually, the JSON will be compacted and not displayed in a pretty format. This was altered for readability.
+NOTE: Actually, the JSON will be compacted and not displayed in a pretty format. This was altered for readability.
 
-Summary
--------
+== Summary
 
 Congratulations! You've just set up Spring XD and tapped a live twitter stream of data, piping it into a file.
