--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ You'll set up https://github.com/spring-projects/spring-xd/wiki[Spring XD (eXtre
  
 == How to complete this guide
 
-If you are on a Mac you can get some simple instructions to <<scratch>>.
+If you are on a Mac there are some simple instructions to <<scratch>>.
 
 If you don't have a Mac or you aren't interested in installing Homebrew, then you can skip that and jump right to <<initial>>.
 
@@ -30,7 +30,7 @@ ruby -e "$(curl -fsSL https://raw.github.com/mxcl/homebrew/go)"
     
 This installation script will provide extra information.
 
-Homebrew has a base set of "formulas" to install many tools. But it also comes with the ability to support 3rd party sets called "taps". Pivotal has a http://github.com/pivotal/homebrew-tap[tap] that includes several tools including Spring XD, which you'll see in the next section.
+Homebrew has a base set of "formulas" to install many tools. It also supports 3rd party sets called "taps". Pivotal has a http://github.com/pivotal/homebrew-tap[tap] that provides several tools including Spring XD, which you'll see in the next section.
 
 [[initial]]
 == Installing Spring XD
@@ -45,16 +45,14 @@ That's it! It might take a little bit of time to install.
 
 If you aren't using Homebrew or you're on a different platform:
 
-1. Download http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/1.0.0.M4/spring-xd-1.0.0.M4-dist.zip[Spring XD 1.0.0.M4].
-2. Move it to your preferred folder and unzip it.
-3. Configure XD_HOME to point at that folder.
-
+1. Download http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/1.0.0.M7/spring-xd-1.0.0.M7-dist.zip[Spring XD 1.0.0.M7].
+2. Move it to your preferred folder and unzip it. For convenience, we will refer to this location as `$XD_INSTALL_DIR`
 
 == Running Spring XD
 To start Spring XD:
 
 ----
-xd-singlenode
+$XD_INSTALL_DIR/xd/bin/xd-singlenode
 ----
     
 NOTE: *singlenode* is Spring XD's simplest mode and more suited for demonstration purposes. See https://github.com/spring-projects/spring-xd/wiki for more options and details.
@@ -62,9 +60,6 @@ NOTE: *singlenode* is Spring XD's simplest mode and more suited for demonstratio
 You should see something like this:
 
 ....
-22:55:18,330  INFO main server.AdminServer:205 - started embedded tomcat adapter
-22:55:18,801  INFO main container.XDContainer:143 - started container: 0
-22:55:18,808  INFO main launcher.LocalContainerLauncher:109 - 
  _____                           __   _______
 /  ___|          (-)             \ \ / /  _  \
 \ `--. _ __  _ __ _ _ __   __ _   \ V /| | | |
@@ -73,15 +68,16 @@ You should see something like this:
 \____/| .__/|_|  |_|_| |_|\__, | \/   \/___/
       | |                  __/ |
       |_|                 |___/
-1.0.0.M4                         eXtreme Data
+1.0.0.M7                         eXtreme Data
 
-Using local mode JMX is disabled for XD components
+Started : SingleNodeApplication
+Documentation: https://github.com/spring-projects/spring-xd/wiki
 ....
 
-In another terminal, start Spring XD's management  shell:
+In another terminal, start Spring XD's management shell:
 
 ----
-xd-shell
+$XD_INSTALL_DIR/shell/bin/xd-shell
 ----
     
 This will produce a prompt:
@@ -96,100 +92,30 @@ This will produce a prompt:
       | |                  __/ |
       |_|                 |___/
 eXtreme Data
-1.0.0.M4 | Admin Server Target: http://localhost:8080
+1.0.0.M7 | Admin Server Target: http://localhost:9393
 Welcome to the Spring XD shell. For assistance hit TAB or type "help".
 xd:>
 ....
 
 Inside Spring XD's shell create a twitter stream:
 
-    xd:> stream create --name twittersearchjava --definition "twittersearch --outputType=application/json --fixedDelay=1000 --consumerKey=afes2uqo6JAuFljdJFhqA --consumerSecret=0top8crpmd1MXGEbbgzAwVJSAODMcbeAbhwHXLnsg --query='java' | file"
+    xd:> stream create --name twittersearchjava --definition "twittersearch --consumerKey=afes2uqo6JAuFljdJFhqA --consumerSecret=0top8crpmd1MXGEbbgzAwVJSAODMcbeAbhwHXLnsg --query='java' | file" --deploy
 
-Here you are creating a **stream** which consists of a *source* and a *sink*.
+Here you are creating a **stream** which consists of a *source* and a *sink*. In addition to creating a stream definition, You are also deploying the stream using the `--deploy` option.
 
-- The source is named **twittersearchjava**.
-- The source is **twittersearch**, output formatted as JSON, every 1000 milliseconds, querying on the token *java*.
+- The stream is named **twittersearchjava**.
+- The source is **twittersearch**, using credentials required by the https://dev.twitter.com/docs/api[Twitter API], querying on the token *java*.
 - The results are piped into the **file** sink, which defaults to **/tmp/xd/output/[streamName].out**
-
-NOTE: This example shows the output being written as JSON. Spring XD supports many more formats for both inputs and outputs. Read more about this at https://github.com/spring-projects/spring-xd/wiki/Type-Conversion.
 
 In another terminal:
 
     $ cd /tmp/xd/output
     $ tail -f twittersearchjava.out
 
-Spring XD is capturing live data from twitter about *java* and writing it to `twittersearchjava.out`. You should see something like this:
+Spring XD is capturing live data from twitter about *java* and writing it to `twittersearchjava.out`. You should see the tweets rendered as JSON. While Spring XD runs and the stream is deployed, the file sink will continue to grow as it accumulates more data. You can stop the stream by undeploying it from the Spring XD shell:
 
-[source,json]
-----
-{
-	"id":394549063997460480,
-	"text":"Hello world, do u need an experienced #Java #Software #Developer? Contact me ASAP. I work as a freelancer and full time. BB pin: 23AD2DCE","createdAt":1382902801000,
-	"fromUser":"thejdeveloper",
-	"profileImageUrl":"http://pbs.twimg.com/profile_images/378800000503045039/10ba9d12cdc8b130884e782bb9c999f9_normal.jpeg",
-	"toUserId":0,
-	"inReplyToStatusId":null,
-	"inReplyToUserId":null,
-	"inReplyToScreenName":"null",
-	"fromUserId":584768355,
-	"languageCode":"en",
-	"source":"<a href=\"http://blackberry.com/twitter\" rel=\"nofollow\">Twitter for BlackBerry®</a>",
-	"retweetCount":0,"retweeted":false,
-	"retweetedStatus":null,
-	"favorited":false,
-	"entities":{
-		"urls":[],
-		"mentions":[],
-		"media":[],
-		"tickerSymbols":[],
-		"hashTags":[
-			{"text":"Java","indices":[38,43]},
-			{"text":"Software","indices":[44,53]},
-			{"text":"Developer","indices":[54,64]}
-		]
-	},
-	"user":{
-		"id":584768355,
-		"screenName":"thejdeveloper",
-		"name":"Johnson Ayomide",
-		"url":"http://t.co/fLa7IYnE9f",
-		"profileImageUrl":"http://pbs.twimg.com/profile_images/378800000503045039/10ba9d12cdc8b130884e782bb9c999f9_normal.jpeg",
-		"description":"",
-		"location":"Nigeria",
-		"createdDate":1337428353000,
-		"language":"en",
-		"statusesCount":1143,
-		"friendsCount":76,
-		"followersCount":90,
-		"favoritesCount":0,
-		"listedCount":1,
-		"following":false,
-		"followRequestSent":false,
-		"notificationsEnabled":false,
-		"verified":false,
-		"geoEnabled":true,
-		"contributorsEnabled":false,
-		"translator":false,
-		"timeZone":null,
-		"utcOffset":0,
-		"sidebarBorderColor":"C0DEED",
-		"sidebarFillColor":"DDEEF6",
-		"backgroundColor":"C0DEED",
-		"backgroundImageUrl":"http://abs.twimg.com/images/themes/theme1/bg.png",
-		"backgroundImageTiled":false,
-		"textColor":"333333",
-		"linkColor":"0084B4",
-		"protected":false,
-		"profileUrl":"http://twitter.com/thejdeveloper"
-	},
-	"retweet":false
-}
-----
-
-This is a single tweet in link:/understanding/JSON[JSON] format. The file actually contains many tweets, but that would fill up the guide. And while Spring XD runs, the file sink will continue to grow as it accumulates more data.
-    
-NOTE: Actually, the JSON will be compacted and not displayed in a pretty format. This was altered for readability.
+	xd:>stream undeploy twittersearchjava
 
 == Summary
 
-Congratulations! You've just set up Spring XD and tapped a live twitter stream of data, piping it into a file.
+Congratulations! You've just installed Spring XD and created a stream to capture a live twitter feed and pipe it into a file.
