updated for RC1

--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,8 @@ projects: [spring-xd]
 :toc:
 :icons: font
 :source-highlighter: prettify
+:appversion: 1.0.0.RC1
+
 == What you'll build
 
 You'll set up https://github.com/spring-projects/spring-xd/wiki[Spring XD (eXtreme Data)], create a stream to monitor a live twitter feed, and pipe it into a file.
@@ -45,7 +47,7 @@ That's it! It might take a little bit of time to install.
 
 If you aren't using Homebrew or you're on a different platform:
 
-1. Download http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/1.0.0.M7/spring-xd-1.0.0.M7-dist.zip[Spring XD 1.0.0.M7].
+1. Download http://repo.spring.io/simple/libs-milestone-local/org/springframework/xd/spring-xd/{appversion}/spring-xd-{appversion}-dist.zip[Spring XD {appversion}].
 2. Move it to your preferred folder and unzip it. For convenience, we will refer to this location as `$XD_INSTALL_DIR`
 
 == Running Spring XD
@@ -59,6 +61,7 @@ NOTE: *singlenode* is Spring XD's simplest mode and more suited for demonstratio
     
 You should see something like this:
 
+[subs="attributes"]
 ....
  _____                           __   _______
 /  ___|          (-)             \ \ / /  _  \
@@ -68,7 +71,7 @@ You should see something like this:
 \____/| .__/|_|  |_|_| |_|\__, | \/   \/___/
       | |                  __/ |
       |_|                 |___/
-1.0.0.M7                         eXtreme Data
+{appversion}                    eXtreme Data
 
 Started : SingleNodeApplication
 Documentation: https://github.com/spring-projects/spring-xd/wiki
@@ -82,6 +85,7 @@ $XD_INSTALL_DIR/shell/bin/xd-shell
     
 This will produce a prompt:
 
+[subs="attributes"]
 ....
  _____                           __   _______
 /  ___|          (-)             \ \ / /  _  \
@@ -92,7 +96,7 @@ This will produce a prompt:
       | |                  __/ |
       |_|                 |___/
 eXtreme Data
-1.0.0.M7 | Admin Server Target: http://localhost:9393
+{appversion} | Admin Server Target: http://localhost:9393
 Welcome to the Spring XD shell. For assistance hit TAB or type "help".
 xd:>
 ....
